# home-gateway

./: .gitignore  README.md
docs/changes/: 0001-optimize-image.md  0002-kernel-dtb-ab-via-ext4load.md  0003-mqtt-broker-tren-host.md  0004-pwm-backlight-control.md  0005-ota-pull-model-host-server.md  0006-read-only-rootfs.md  INDEX.md
docs/concepts/: 01-ota-ab-architecture.md  02-read-only-rootfs.md  INDEX.md
docs/debugging/: INDEX.md
docs/decisions/: 01-rootfs-only-vs-full-ab.md  INDEX.md
docs/guides/: 01-build-and-flash.md  02-ota-update-workflow.md  INDEX.md  (+6 more)
home-gateway-app/: .gitignore  CMakeLists.txt  README.md
home-gateway-app/resources/: resources.qrc
home-gateway-app/resources/styles/: dashboard.qss  firmware_popup.qss  firmware_progress.qss  settings.qss
home-gateway-app/src/: main.cpp
home-gateway-app/src/drivers/: BacklightPwm.cpp  BacklightPwm.h  LightSensor.cpp  TemperatureHumiditySensor.cpp
home-gateway-app/src/network/: MqttClient.cpp  MqttClient.h  NetworkInfo.cpp  NetworkInfo.h
home-gateway-app/src/ota/: FirmwareManifest.cpp  FirmwareManifest.h  OtaConfig.h  OtaManager.cpp  OtaManager.h  OtaSettings.cpp  OtaSettings.h  SwupdateProgressClient.cpp  SwupdateProgressClient.h
home-gateway-app/src/ui/: FirmwareUpdatePopup.cpp  FirmwareUpdatePopup.h  FirmwareUpdatePopup.ui  FirmwareUpdateProgress.cpp  FirmwareUpdateProgress.h  FirmwareUpdateProgress.ui  MainDashboard.cpp  MainDashboard.h  MainDashboard.ui  SettingsDashboard.cpp  SettingsDashboard.h  SettingsDashboard.ui  StatusHeader.cpp  StatusHeader.h  StatusHeader.ui
meta-bsp/: README.md
meta-ota/: README.md
(+35 files in other folders)
